# regma

./: README.md  pyproject.toml  regma.py
examples/: postfix_notation.py
