[tool.poetry]
name = "regma"
version = "0.1.0"
description = "A Python DSL-like library for creating lexers."
authors = ["mental <mentalfoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
